--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["backfaceimg", "gamecard", "stylelint"]
+  "cSpell.words": ["backfaceimg", "frontface", "gamecard", "stylelint"]
 }
