config in typescript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["backfaceimg", "frontface", "gamecard", "stylelint"]
+  "cSpell.words": [
+    "время",
+    "Оставшееся",
+    "backfaceimg",
+    "frontface",
+    "gamecard",
+    "stylelint"
+  ]
 }
