--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "third-part",
   "version": "1.0.0",
   "description": "https://github.com/sadrika1/third-part.git",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "SET NODE_ENV='production' && webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "format": "prettier --write ./src/",
-    "lint:js": "eslint ./src/**/*.js",
     "lint:css": "stylelint ./src/**/*.css",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint": "npm run lint:css",
     "lint:fix": "eslint --fix --ext .js,.jsx .",
     "prepare": "husky install",
     "lint:ts": "tsc --noEmit"
